add mission endpoint
